--- a/index.html
+++ b/index.html
@@ -68,34 +68,25 @@
 
 
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/other/other_23.jpg">
-      <a href="about.html">
 
-        <h1>about</h1>
         <div class="btn-wrap--perspective">
-          <a href="" class="btn btn-3d btn-3db">About<i class="fas fa-angle-down fa-position-right"></i></a>
+          <a href="about.html" class="btn btn-3d btn-3db">About<i class="fas fa-angle-down fa-position-right"></i></a>
         </div>
 
-      </a>
     </section>
 
     <section id="spring">
       <h1>闲庭信步</h1>
-      <p>
-散歩 "闲庭信步"スポットには、松云台、浣溪叠、枫舞清韵、涵秋叠影などのスポットがあります。全体的なテーマは木です。中庭をのんびり歩くなど、ゆったりとくつろげる場所を提供します。</p>
+      <p>散歩 "闲庭信步"スポットには、松云台、浣溪叠、枫舞清韵、涵秋叠影などのスポットがあります。全体的なテーマは木です。中庭をのんびり歩くなど、ゆったりとくつろげる場所を提供します。</p>
     </section>
 
-     <a href="spring.html">
+
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring_01.jpg">
-
-
-
+       
       <div class="btn-wrap--perspective">
-        <a href="" class="btn btn-3d btn-3db">Spring<i class="fas fa-angle-down fa-position-right"></i></a>
+        <a href="spring.html" class="btn btn-3d btn-3db">Spring<i class="fas fa-angle-down fa-position-right"></i></a>
       </div>
-
-      <h1>spring</h1>
-      </a>
-      </section>
+     </section>
 
     <section id="summer">
       <h1>春华秋实</h1>
