--- a/index.html
+++ b/index.html
@@ -48,17 +48,14 @@
 <div id="home">
 
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/back.jpg">
-      <h1>home</h1>
 
       <div class="btn-wrap--perspective">
-        <a href="" class="btn btn-3d btn-3db">Home<i class="fas fa-angle-down fa-position-right"></i></a>
+        <a href="index.html" class="btn btn-3d btn-3db">Home<i class="fas fa-angle-down fa-position-right"></i></a>
       </div>
-
+<!--
        <iframe width="800" scrolling="no" height="150" frameborder="0" allowtransparency="true" src="https://i.tianqi.com?c=code&id=48&icon=1&num=6&site=12"></iframe>
+-->
     </section>
-
-
-
 
 
     <section id="about">
