--- a/index.html
+++ b/index.html
@@ -93,11 +93,15 @@
 
     </section>
 
-      <a href="summer.html">
+
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer_01.jpg">
-      <h1>summer</h1>
-      </a>
-    </section>
+
+      <div class="btn-wrap--perspective">
+        <a href="summer.html" class="btn btn-3d btn-3db">Summer<i class="fas fa-angle-down fa-position-right"></i></a>
+      </div>
+     </section>
+
+
 
     <section id="autumn">
       <h1>春华秋实</h1>
@@ -105,11 +109,18 @@
 
     </section>
 
-         <a href="autumn.html">
-        <section class="parallax-window" data-parallax="scroll" data-image-src="images/autumn_07.jpg">
-          <h1>autumn</h1>
-          </a>
-        </section>
+
+
+    <section class="parallax-window" data-parallax="scroll" data-image-src="images/autumn_07.jpg">
+
+      <div class="btn-wrap--perspective">
+        <a href="autumn.html" class="btn btn-3d btn-3db">Autumn<i class="fas fa-angle-down fa-position-right"></i></a>
+      </div>
+     </section>
+
+
+
+
 
         <section id="winter">
           <h1>autumn</h1>
@@ -118,22 +129,32 @@
         </section>
 
 
-          <a href="winter.html">
+
         <section class="parallax-window" data-parallax="scroll" data-image-src="images/winter_01.jpg">
-          <h1>winter</h1>
-         </a>
-        </section>
+
+          <div class="btn-wrap--perspective">
+            <a href="winter.html" class="btn btn-3d btn-3db">Winter<i class="fas fa-angle-down fa-position-right"></i></a>
+          </div>
+         </section>
+
+
 
         <section id="other">
           <h1>winter</h1>
           <p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
         </section>
 
-          <a href="other.html">
+
+
         <section class="parallax-window" data-parallax="scroll" data-image-src="images/back.jpg">
-          <h1>other</h1>
-        </a>
-          </section>
+
+          <div class="btn-wrap--perspective">
+            <a href="other.html" class="btn btn-3d btn-3db">Other<i class="fas fa-angle-down fa-position-right"></i></a>
+        </div>
+       </section>
+
+
+
         <section id="other">
           <h1>other</h1>
           <p>Generated Dummy Text.<br>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was.</p>
