--- a/about.html
+++ b/about.html
@@ -41,13 +41,13 @@
   </header>
 
 <div id="home">
-  <h1>About</h1>
+  <section class="parallax-window" data-parallax="scroll" data-image-src="images/other/other_17.jpg">
+      <h1>About</h1>
+    </section>
 
   <article id="VIDEO">
 　　　<video src="video/1.mp4" muted="" autoplay="" loop="" controls="true"></video>
-</article>1
-
-    </section>
+　</article>
 
 
 
