--- a/other.html
+++ b/other.html
@@ -21,26 +21,20 @@
 
     <h1>BeijingchangyangPark</h1>
 
-    <div class="navButton">
-            <span class="navButton-line"></span>
-            <span class="navButton-line"></span>
-            <span class="navButton-line"></span>
-          </div>
 
 
     <nav>
       <ul class="menu">
-
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#spring">Spring</a></li>
-        <li><a href="#summer">Summer</a></li>
-        <li><a href="#autumn">Autumn</a></li>
-        <li><a href="#winter">Winter</a></li>
-        <li><a href="#other">Other</a></li>
-      </ul>
-    </nav>
-  </header>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="spring.html">Spring</a></li>
+    <li><a href="summer.html">Summer</a></li>
+    <li><a href="autumn.html">Autumn</a></li>
+    <li><a href="winter.html">Winter</a></li>
+    <li><a href="other.html">Other</a></li>
+  </ul>
+</nav>
+</header>
 
 
 
