--- a/about.html
+++ b/about.html
@@ -19,11 +19,7 @@
 
     <h1>BeijingchangyangPark</h1>
 
-        <div class="navButton">
-                <span class="navButton-line"></span>
-                <span class="navButton-line"></span>
-                <span class="navButton-line"></span>
-              </div>
+
 
 
         <nav>
@@ -49,6 +45,16 @@
 　　　<video src="video/1.mp4" muted="" autoplay="" loop="" controls="true"></video>
 　</article>
 
+<article class="TEXT">
+   <h1>Changyang Park</h1>
+   <p>
+   Changyang Park is located in Fangshan District, Beijing, also known as Fangshan New City Waterfront Forest Park.
+   The park has beautiful scenery, lush flowers and quiet environment. It mainly has three parts: urban comprehensive area, wetland display area and country ecological area. It is distributed with Huaqiu Shi, Huancui Island, green shade labyrinth, condensate autumn color, leisure walk, etc. Attractions.
+   Self-service water dispenser,Jianbu Road in the park.<br>
+   There are many trees and plants, and the environment is good. The air is fresh and suitable for walking. There are some landscape sculptures in the park. The park is always filled with a laid-back atmosphere, Let your nervous nerves relax.
+    Crossing the river stones of reeds and lotus leaves, Looking at the rows of reflections moving in the river, Facing the warm sunshine.
+  </p>
+</article>
 
 
 
