--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
     </section>
 
     <section id="spring">
-      <p>長陽公園は、房山区長陽町にあります。北京で建設中の11万エーカーの新しい公園の1つです。最大の陸地、地理的な場所、最も完全な緑化樹種、および最も完全なインフラストラクチャを備えた公園です。庭園では、人工の風景と元の生態学的な風景が組み合わさって、カラフルな園芸植物のコミュニティを形成し、都市の森の風景を作り出し、市民がリラックス、レクリエーション、フィットネスするのに理想的な場所を提供します。この庭園は、2013年に北京庭園を受賞しました緑化局は市の「質の高い公園」として評価されました。共植：53550本の木、19920本の灌木、717952年生の花、105743 105芝生、668914㎡地被。
-全体的な自然条件によれば、長陽公園は「2つの川と2つの庭園」の生態学的なウォーターフロントの景観を形成しています。</p>
+      <p>长阳公园在房山区长阳。北京建设中的11万英亩的新公园之一。
+        最大的陆地、地理位置、最完整的绿化树种和最完整的基础设施公园。
+        在园林中，人工景观和原始生态景观相结合，形成了多彩的园艺植物社区，打造出城市森林风景，为市民提供放松、休闲、健身的理想场所。
+        这个庭园在2013年获得北京庭园奖的绿化局被评价为市里“高品质的公园”。共植：53550棵树，19920棵灌木，717952年生花，10573105草坪，668914㎡。根据整体自然条件，长阳公园形成了“两条河和两个花园”的生态水前景观。</p>
 
     </section>
 
@@ -83,8 +85,9 @@
      </section>
 
     <section id="summer">
-      <h1>闲庭信步</h1>
-      <p>散歩 "闲庭信步"スポットには、松云台、浣溪叠、枫舞清韵、涵秋叠影などのスポットがあります。全体的なテーマは木です。中庭をのんびり歩くなど、ゆったりとくつろげる場所を提供します。</p>
+      <p>
+        闲庭信步<br>
+      散步"闲庭信步"景点包括松云台、浣溪、枫舞清韵、涵秋畲影等景点。整个主题是树。提供悠闲地在院子里步行等悠闲舒适的地方。</p>
 
     </section>
 
@@ -99,9 +102,8 @@
 
 
     <section id="autumn">
-      <h1>春华秋实</h1>
-      <p>「春华秋实」のシーンには、主に梨花の春の雪、ベゴニアフラワーストリーム、サクラダンスフライング、秀逸台、陳西広場などの景勝地があります。この地域は、「春に開花し、秋に果物を広げる」植物、したがって「春の花と秋の果物」が優勢です。</p>
-
+      <p>春华秋实<br>
+      春华秋实的场景，主要有梨花春雪、柏哥尼亚风流韵事、萨克拉门托舞池、秀逸台、陈西广场等风景景点。这个地区以“春天开花，秋天拓宽水果”的植物，因此“春天的花和秋天的水果”占优势。</p>
     </section>
 
 
@@ -119,8 +121,9 @@
 
         <section id="winter">
           <h1>autumn</h1>
-          <h1>寧夏の秋の風景</h1>
-          <p>「寧夏の秋の風景」のレジャーとエンターテイメントの景勝地には、白州広場、観音流水遊歩道、サクラダンス、空飛ぶ森、子供たちの楽しい広場、フィットネストレイル、その他の景勝地があります。この部分は色とりどりの葉が多く、秋には晩秋に太陽が沈み、空は赤い雲でいっぱいで、赤いカエデの葉は空と共通です。</p>
+          <p>
+          宁夏秋景<br>
+          “宁夏秋景”休闲娱乐和娱乐的风景区包括白州广场、观音流水游道、小樱舞、飞天森林、儿童快乐广场、健身室跑道和其他风景区。这部分多有五彩缤纷的叶子，秋天，晚秋太阳沉下，天空充满红云，红色枫叶与天空是共通的。</p>
         </section>
 
 
@@ -136,7 +139,9 @@
 
         <section id="other">
           <h1>winter</h1>
-          
+          <p>
+          自驾线路<br>
+          京港澳高速从长阳/京良路出口(19b)离开(经京良收费站)，遇岔口向右，进入S315/京良路(辅路)。沿S315/京良路(辅路)行驶1.5公里，右转进入长兴西街。沿长兴西街行驶327米，右转进入公园北路，行驶约300米，左手即可看见公园北门。</p>
         </section>
 
 
@@ -152,6 +157,11 @@
 
         <section id="other">
           <h1>other</h1>
+
+          <p>
+           公交路线<br>
+            1、六里桥东(E口进)乘坐地铁9号线(郭公庄方向)，7站，在郭公庄换乘地铁房山线(苏庄方向)，4站，在地铁篱笆房下车(A1口出)步行135米，地铁篱笆房站换乘房2(奥特莱斯方向)，2站，篱笆房下车步行675米，即达长阳公园北门。
+　      　<br>2、六里桥东乘坐831(或835、837)，1站，约30分钟，在长阳环岛南下车，步行224米至九州溪雅苑南，换乘房2(或房15、房51、房42)篱笆房方向，1站，篱笆房下车步行694米，即达长阳公园北门。</p>
         </section>
 
   </div>
