--- a/other.html
+++ b/other.html
@@ -41,7 +41,7 @@
   <div id="home">
 
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/other/1.jpg">
-      <h1></h1>
+      <h1>other</h1>
 
     </section>
 
