--- a/spring.html
+++ b/spring.html
@@ -47,7 +47,7 @@
 
 
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/spring_01.jpg">
-      <h1></h1>
+      <h1>spring</h1>
     </section>
 
     <section id="about">
