--- a/winter.html
+++ b/winter.html
@@ -56,7 +56,7 @@
   <div id="home">
 
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/winter/winter_01.jpg">
-      <h1></h1>
+      <h1>winter</h1>
     </section>
 
     <section id="about">
