--- a/autumn.html
+++ b/autumn.html
@@ -44,7 +44,7 @@
   <div id="home">
 
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/autumn/autumn_01.jpg">
-      <h1></h1>
+      <h1>autumn</h1>
 
     </section>
 
