--- a/summer.html
+++ b/summer.html
@@ -45,7 +45,7 @@
   <div id="home">
 
     <section class="parallax-window" data-parallax="scroll" data-image-src="images/summer/summer_01.jpg">
-      <h1></h1>
+      <h1>summer</h1>
     </section>
 
     <section id="about">
